# TM_oop_lab3

./: README.md  pyproject.toml
example/: figure.py  figure_rectangle.py  rational.py
tasks/: pair.py  task_figure.py  task_pair.py
tasks/figure_package/: __init__.py  figure.py
tests/: test_figure.py  test_pair.py
